--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,36 +8,42 @@
     <title>Starter Node and Angular</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="css/main.css"> <!-- custom styles -->
 
     <!-- JS -->
+    <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/NerdCtrl.js"></script>
+    <script src="js/controllers/LocationCtrl.js"></script>
+    <script src="js/controllers/CustomerCtrl.js"></script>
     <script src="js/services/NerdService.js"></script>
+    <script src="js/services/CustomerService.js"></script>
+    <script src="js/services/LocationService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="NerdController">
+<body ng-app="sampleApp" >
   <div class="container">
     <!-- HEADER -->
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Stencil: Node and Angular</a>
+            <a class="navbar-brand" href="#/">Raylife Wifi</a>
         </div>
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
         <ul class="nav navbar-nav">
-            <li><a href="/nerds">Nerds</a></li>
+            <li><a href="#/nerds">Nerds</a></li>
+            <li><a href="#/locations">Locations</a></li>
         </ul>
+
     </nav>
 
-  <!-- ANGULAR DYNAMIC CONTENT   -->
-  <div ng-view></div>
+    <!-- ANGULAR DYNAMIC CONTENT   -->
+    <div ng-view></div>
   </div>
 </body>
 </html>
