--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-hr,img{border:0}body,figure{margin:0}.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.pre-scrollable{max-height:340px}.background{background:url(../img/moutain-lake.jpg) center center no-repeat fixed}.label,sub,sup{vertical-align:baseline}/*!
+body,figure{margin:0}.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.pre-scrollable{max-height:340px}.background{background:url(../img/moutain-lake.jpg) center center no-repeat fixed}.btn-class{border:2px solid orange}hr,img{border:0}.btn-class .btn{background:green}.label,sub,sup{vertical-align:baseline}/*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
