--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,10 @@
 
 <div class="jumbotron text-center">
     <h1>Home Page 4 Life</h1>
-
-    <p>{{ tagline }}</p>
+    <section>
+      <p>{{ tagline }}</p>
+      <div class="btn-class">
+        <button class="btn" type="submit">Click here</button>
+      </div>
+    </section>
 </div>
