--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,3 +1,10 @@
 .background {
   background: url(../img/moutain-lake.jpg) no-repeat center center fixed;
 }
+
+.btn-class {
+  border: 2px solid @main-border-color;
+  .btn {
+    background: @main-button-color;
+  }
+}
