--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-hr,img{border:0}body,figure{margin:0}.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.pre-scrollable{max-height:340px}.background{background:url(../img/moutain-lake.jpg) center center no-repeat fixed}.label,sub,sup{vertical-align:baseline}/*!
+hr,img{border:0}body,figure{margin:0}.navbar-fixed-bottom .navbar-collapse,.navbar-fixed-top .navbar-collapse,.pre-scrollable{max-height:340px}.background{background:url(../img/moutain-lake.jpg) center center no-repeat fixed}#submit-loc-btn{clear:both!important}.options-div{width:20rem;display:inline-block}.options-div #opt-label{clear:both;vertical-align:middle}.label,sub,sup{vertical-align:baseline}.options-div #add-option{float:right}/*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
