--- a/public/views/location-form.html
+++ b/public/views/location-form.html
@@ -1,6 +1,6 @@
-<section class="form-page" ng-controller="LocationController">
+<section class="form-page">
   <h4>Select a location</h4>
-  <select id="location-selection" class="form-control">
+  <select id="location-selection" class="form-control" ng-change="!hideForm; getLocationData()" ng-model="selection">
     <option>Select a location</option>
     <option ng-repeat="loc in townNames track by $index" value="{{ loc }}"> {{ loc }} </option>
   </select>
@@ -11,35 +11,37 @@
 
         <p>{{ location.description }}</p>
     </div>
-    <form name="cust-form" ng-submit="makeCustomer">
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" id="customer-email" placeholder="email">
-      </div>
+    <form name="cust-form" class="col-xs-12 col-md-4" ng-hide="hideForm" ng-submit="makeCustomer()" novalidate>
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" class="form-control" id="customer-first-name" placeholder="first name">
+        <input type="text" ng-required="true" ng-minlength="3" name="firstName" class="form-control" id="customer-first-name" placeholder="first name" ng-model="formData.firstName">
+        <p ng-show="cust-form.firstName.$error.minlength" class="help-block">Name is too short</p>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" class="form-control" id="customer-last-name" placeholder="last name">
+        <input type="text" name="lastName" class="form-control" id="customer-last-name" placeholder="last name" ng-model="formData.lastName">
+      </div>
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" ng-required="true" name="email" class="form-control" id="customer-email" placeholder="email" ng-model="formData.email">
+        <p ng-show="cust-form.email.$invalid && !cust-form.email.$pristine" class="help-block">Enter valid email.</p>
       </div>
       <div class="form-group">
         <label for="address">Street Address</label>
-        <input type="text" class="form-control" id="customer-address" placeholder="street address">
+        <input type="text" name="street" class="form-control" id="customer-street" placeholder="street address where you want better service" ng-model="formData.street">
       </div>
       <div class="form-group">
         <label for="lastName">City/Town</label>
-        <input type="text" class="form-control" id="customer-city" placeholder="city/town/area">
+        <input type="text" name="city" class="form-control" id="customer-city" placeholder="city/town/area" ng-model="formData.city">
       </div>
       <div class="form-group">
         <label for="phone">Phone Number</label>
-        <input type="text" class="form-control" id="customer-phone" placeholder="000-000-0000">
+        <input type="text" name="phone" class="form-control" id="customer-phone" placeholder="000-000-0000" ng-model="formData.phone">
       </div>
       <div class="form-inline">
         <div class="form-group">
           <label for="state">State</label>
-          <select class="form-control" id="customer-state" name="state">
+          <select class="form-control" id="customer-state" name="state" ng-model="formData.state">
             <option value="">enter your state</option>
             <option value="AK">Alaska</option>
             <option value="AL">Alabama</option>
@@ -97,19 +99,19 @@
         </div>
         <div class="form-group">
           <label for="zip">Zipcode</label>
-          <input type="number" class="form-control" id="customer-zip" placeholder="00000">
+          <input type="number" class="form-control" id="customer-zip" placeholder="00000" ng-model="formData.zip">
         </div>
       </div>
       <div class="location-options">
         <label for="options">Choose an Option</label>
-        <div class="checkbox" ng-repeat="option in location.options">
+        <div class="radio" ng-required="true" ng-repeat="option in location.options track by $index">
           <label>
-            <input type="checkbox" id="customer-option" value="">
+            <input type="radio" id="customer-option" value="{{ $index + 1 }}" ng-model="formData.choice">
               {{ option }}
           </label>
         </div>
       </div>
-      <button id="submit-customer" class="btn btn-default">Submit</button>
+      <button type="submit" id="submit-customer" ng-disabled="formDatax.$invalid" class="btn btn-default">Submit</button>
     </form>
   <section>
 </section>
