directive for stats, templates instantiated

--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -24,6 +24,10 @@
   display: table;
 }
 
+.t-head {
+  display: table-header-group;
+}
+
 .t-row {
   display: table-row;
   border-bottom: 1px solid black;
@@ -32,4 +36,15 @@
 .t-cell{
   display: table-cell;
 }
+
+.pie-chart {
+  border: 2px solid green;
+  width: 15rem;
+  height: 15rem;
+}
+
+.locations {
+  clear:both;
+}
+
 
