--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
 
     <title>Starter Node and Angular</title>
@@ -23,6 +24,7 @@
     <script src="js/services/AdminService.js"></script>
     <script src="js/services/CustomerService.js"></script>
     <script src="js/services/LocationService.js"></script>
+    <script src="js/directives/directives.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 </head>
