home page collapse nav bar, hero image, text and cta

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,9 +1,25 @@
-@border-color: #000000;
-@main-border-color: orange;
-@main-button-color: green;
+// @border-color: #000000;
+// @main-border-color: orange;
+// @main-button-color: green;
+
+
 
 html {
   font-size: 10px;
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
+
+
+.navbar {
+  margin-bottom: 0 !important;
+}
+
+.navbar-default {
+  background-color: #fff !important;
+  border-color: #fff !important;
 }
 
 @import "index.less";
