--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,3 +1,4 @@
+<div class="container">
 <section class="">
     <h1>Admin Panel</h1>
 
@@ -36,3 +37,4 @@
       </form>
     </section>
 </section>
+</div>
