--- a/public/views/location-form.html
+++ b/public/views/location-form.html
@@ -1,3 +1,4 @@
+<div class="container">
 <section class="form-page" ng-controller="LocationController">
   <h4>Select a location</h4>
   <select id="location-selection" class="form-control">
@@ -113,3 +114,4 @@
     </form>
   <section>
 </section>
+</div>
