--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,10 +1,66 @@
-.background {
-  background: url(../img/moutain-lake.jpg) no-repeat center center fixed;
+// .background {
+//   background: url(../img/moutain-lake.jpg) no-repeat center center fixed;
+// }
+//
+// .btn-class {
+//   border: 2px solid @main-border-color;
+//   .btn {
+//     background: @main-button-color;
+//   }
+// }
+
+.jumbotron {
+  background-image:url('http://www.neyralaw.com/wp-content/uploads/2012/07/tokyo-blue-background-4547.jpg');
+  background-size:cover;
+  height:500px;
+  opacity: .9;
+  border-radius: 0 !important;
+  // position: relative;
+  // top: 0;
+  // margin-top: 0;
+  color: #fff !important;
+  // padding-top: 250px !important;
 }
 
-.btn-class {
-  border: 2px solid @main-border-color;
-  .btn {
-    background: @main-button-color;
-  }
+.jumbo-header {
+  font-weight: 700;
+  text-transform: uppercase;
 }
+
+.jumbo-sub-header {
+  margin-bottom: 25px;
+}
+
+.va-container {
+  height: 100%;
+  width: 100%;
+  display: table;
+  position: relative;
+}
+.va-middle {
+  vertical-align: middle !important;
+  display: table-cell;
+}
+
+.btn-jumbo, .btn-jumbo:link, .btn-jumbo:visited {
+    background-color: rgba(255,255,255,.3) !important;
+    border-radius: 2px !important;
+    color: #fff !important;
+    border: 0px solid rgba(255,255,255,.3) !important;
+    font-weight: bold;
+    text-shadow: 0 1px 0 black;
+}
+
+.btn-jumbo:active, .btn-jumbo:hover {
+    background-color: rgba(0,0,0,.3) !important;
+    color: #fff!important;
+    border: 0px solid rgba(0,0,0,.3) !important;
+    font-weight: bold;
+}
+
+// .hero-text {
+//   // position: relative;
+//   // bottom: 100px;
+//   // left: 40px;
+//   color: #fff !important;
+// }
