--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,10 +1,21 @@
 
 <div class="jumbotron text-center">
-    <h1>Home Page 4 Life</h1>
-    <section>
-      <p>{{ tagline }}</p>
-      <div class="btn-class">
-        <button class="btn" type="submit">Click here</button>
-      </div>
-    </section>
+  <div class="container va-container">
+    <div class="va-middle">
+      <h1 class="jumbo-header">Get Connected</h1>
+      <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+      <a href="#/locations" title="" class="btn btn-jumbo btn-lg">Click Here</a>
+    </div>
+  </div>
 </div>
+
+<!-- <video autoplay loop muted poster="screenshot.jpg" id="background">
+    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+</video>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>www.viewlike.us</h1>
+            </div>
+        </div>
+    </div> -->
