seed data, chart working, admin panel correct

--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -1,3 +1,10 @@
+.head {
+  vertical-align: middle;
+  &.t-head{
+    vertical-align: middle;
+  }
+}
+
 #submit-loc-btn {
   clear: both !important;
 }
@@ -16,7 +23,11 @@
   }
 }
 
-#fdata {
+#fdata-display {
+  border-radius: @border-radius;
+  background: #EEE;
+  min-height: 30rem;
+  max-height: 50rem;
 
 }
 
@@ -25,30 +36,66 @@
 }
 
 .t-head {
+  min-width: 125px;
+  vertical-align: bottom;
   display: table-header-group;
 }
 
 .t-row {
-  display: table-row;
+  display: table-row-group;
+  border-bottom: 1px solid black;
+}
+
+
+.t-cell{
+  word-wrap: break-word;
+  min-width: 125px;
+  display: table-cell;
   border-bottom: 1px solid black;
 }
 
 .th-cell {
-
+  .t-cell;
+  font-weight: 700;
+  border-bottom: 3px solid black;
 }
 
-.t-cell{
-  display: table-cell;
-}
+.stats-dash{
+  .group-progress {
+    margin: auto;
+    text-align: center;
+    &#progress-header {
+      margin: auto;
+    }
+    &#progress-count{
+      margin-top: 1.5rem;
+    }
+    &#progress-bar {
+      margin: auto;
+      margin-top:1.5rem;
+      @media (min-width: 1239px){
+        margin-left: 2rem;
+      }
+    }
+  }
 
-.pie-chart {
-  border: 2px solid green;
-  width: 15rem;
-  height: 15rem;
-}
+  .group-options{
+    margin: auto;
+    text-align: left;
+    &.pie-chart {
+      text-align: left;
+      width: 15rem;
+      height: 15rem;
+    }
+    .options-box p {
+      min-width: 300px;
+    }
+  }
 
-.locations {
-  clear:both;
+  #pie-chart {
+    margin: auto;
+    width: 300px;
+  }
 }
 
 .cust-table {
@@ -61,5 +108,6 @@
     vertical-align: middle;
   }
 }
+
 
 
