--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,9 +1,11 @@
+@border-radius: 5px;
+
+
+@import "../libs/bootstrap/less/bootstrap.less";
+@import "form.less";
+@import "admin.less";
+@import "index.less";
 
 html {
   font-size: 10px;
 }
-
-@import "index.less";
-@import "form.less";
-@import "admin.less";
-@import "../libs/bootstrap/less/bootstrap.less";
