--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
 
 <div class="jumbotron text-center">
-    <h1>Home Page 4 Life</h1>
+    <h1>Get Connected</h1>
 
-    <p>{{ tagline }}</p>
+    <a href="#/locations"><button class="btn btn-group">Find your location</button></a>
 </div>
