--- a/public/less/index.less
+++ b/public/less/index.less
@@ -1,3 +1,8 @@
 .background {
   background: url(../img/moutain-lake.jpg) no-repeat center center fixed;
 }
+
+.navbar {
+  margin-bottom: 0;
+  border-radius: 0;
+}
