--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,15 +10,19 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="libs/angular-chart.js/dist/angular-chart.css">
 
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
-    <!-- Chart.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+    <!-- chart js -->
+    <script src="libs/chart/Chart.js"></script>
+    <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
+
     <!-- ANGULAR CUSTOM -->
     <script src="js/controllers/MainCtrl.js"></script>
+    <!-- // <script src="js/controllers/Chart.js"></script> -->
     <script src="js/controllers/AdminCtrl.js"></script>
     <script src="js/controllers/LocationCtrl.js"></script>
     <script src="js/controllers/CustomerCtrl.js"></script>
@@ -30,9 +34,9 @@
     <script src="js/app.js"></script>
 </head>
 <body ng-app="sampleApp" >
-  <div class="container">
+  <div>
     <!-- HEADER -->
-    <nav class="container-fluid navbar navbar-inverse">
+    <nav class="container-fluid header navbar navbar-inverse">
         <div class="navbar-header">
             <a class="navbar-brand" href="#/">Raylife Wifi</a>
         </div>
@@ -42,7 +46,6 @@
             <li><a href="#/admin">Admin</a></li>
             <li><a href="#/locations">Locations</a></li>
         </ul>
-
     </nav>
 
     <!-- ANGULAR DYNAMIC CONTENT   -->
