--- a/public/views/templates/customer-table.html
+++ b/public/views/templates/customer-table.html
@@ -1,23 +1,42 @@
-<!-- Customer Table -->
-<section class='table col-xs-12 cust-table'>
-  <div class='t-head cust-table'>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>First Name</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>Last Name</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>Street</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>City/Town</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>State</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>Option</div>
-    <div class='th-cell col-xs-3 col-sm-2 col-md-2'>Email</div>
-    <div class='t-row' ng-repeat="customer in selected.customers">
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.firstName }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.lastName }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.street }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.city }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.state }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.choice }}</div>
-      <div class='t-cell col-xs-3 col-sm-2 col-md-2'>{{ customer.email }}</div>
-    <div>
-      <!-- Email button -->
-
+<section class="container">
+  <div class="row">
+    <ul class="nav nav-pills">
+      <li ng-class="{ active: isSet(4) }" ng-click="setTab(4)"><a href="">Customers</a></li>
+      <li ng-class="{ active: isSet(5) }" ng-click="setTab(5); copyCSEmails(selected.customers)"><a href="">Email Prep</a></li>
+    </ul>
   </div>
+</section>
+    <!-- CUSTOMER TABLE per Location -->
+<section ng-show="isSet(4)">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Street</th>
+        <th>City/Town</th>
+        <th>State</th>
+        <th>Option</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr  ng-repeat="customer in selected.customers track by $index">
+        <th scope="row">{{$index + 1}}</th>
+        <td>{{ customer.firstName }}</td>
+        <td>{{ customer.lastName }}</td>
+        <td>{{ customer.street }}</td>
+        <td>{{ customer.city }}</td>
+        <td>{{ customer.state }}</td>
+        <td>{{ customer.choice }}</td>
+        <td>{{ customer.email }}</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+      <!-- CSV -->
+<section class="container" ng-show="isSet(5)" ng-cloak>
+<!--   <button clipboard text="emailList" on-copied="copySuccess()" on-error="copyFail(err)" data class="btn btn-group">Copy to Clipboard</button> -->
+  <p class="copy-text col-xs-12" ng-model="emailList">{{selected.emails}}<p>
 </section>
