--- a/public/less/main.less
+++ b/public/less/main.less
@@ -8,4 +8,15 @@
 
 html {
   font-size: 10px;
+  overflow: hidden;
+  height: 100%
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
+
+.modal-open {
+  overflow: auto;
 }
