configured db for production mode

--- a/public/views/templates/add-location.html
+++ b/public/views/templates/add-location.html
@@ -1,4 +1,4 @@
-<section class="container col-xs-12" id="location-add-form">
+<section class="container" id="location-add-form">
   <form class="col-md-6" id="location-signup-form" name="location-form" ng-submit="makeLocation()">
     <div class="form-group">
       <label for="name">Project Name</label>
