--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
 
-    <title>Starter Node and Angular</title>
+    <title>Wifi Demand Finder</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css"> <!-- custom styles -->
-    <link rel="stylesheet" href="libs/angular-chart.js/dist/angular-chart.css">
+    <link rel="stylesheet" href="css/main.css">
+    <!-- custom styles -->
 
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <!-- chart js -->
-    <script src="libs/chart/Chart.js"></script>
+    <script src="libs/Chart.js/Chart.js"></script>
     <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
 
     <!-- ANGULAR CUSTOM -->
