--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,7 +18,7 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
     <!-- chart js -->
     <script src="libs/Chart.js/Chart.js"></script>
-    <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="libs/angular-chart.js/angular-chart.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/controllers/MainCtrl.js"></script>
