--- a/public/less/main.less
+++ b/public/less/main.less
@@ -5,16 +5,18 @@
 
 
 html {
-  font-size: 10px;
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #ecf0f1;
+    font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
+    color: rgb(86, 90, 92);
   }
 }
 
-
 .navbar {
   margin-bottom: 0 !important;
+  font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
 }
 
 .navbar-default {
