--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,7 +11,10 @@
     <title>Starter Node and Angular</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css"> <!-- custom styles -->
+    <link rel="stylesheet" href="css/main.css"> <!-- custom styles
+    -->
+    <link href='https://fonts.googleapis.com/css?family=Istok+Web' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
@@ -54,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand pull left" href="#/">Ray's Wifi</a>
+          <a class="navbar-brand pull left" href="#/"><strong>Ray's Wifi</strong></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
