added images and ghost button

--- a/public/less/index.less
+++ b/public/less/index.less
@@ -47,25 +47,41 @@
   display: table-cell;
 }
 
-.btn-home-mobile {
+.btn-home-mobile, .btn-home-mobile:link, .btn-home-mobile:visited {
   width: 100%;
-}
-
-.btn-jumbo, .btn-jumbo:link, .btn-jumbo:visited {
-  background-color: rgba(52, 152, 219,1.0) !important;
   border-radius: 2px !important;
   color: #fff !important;
-  border-color: rgba(52, 152, 219,1.0) !important;
   font-weight: bold;
   text-shadow: 0 1px 0 black;
+  background-color: rgba(52, 152, 219,1.0) !important;
+  border-color: rgba(52, 152, 219,1.0) !important;
   border-bottom-color: rgba(41, 128, 185,1.0);
 }
 
-.btn-jumbo:active, .btn-jumbo:hover {
+.btn-home-mobile:active, .btn-home-mobile:hover {
   background-color: rgba(41, 128, 185,1.0) !important;
   color: #fff !important;
   border-color: rgba(41, 128, 185,1.0) !important;
   border-bottom-color: rgba(41, 128, 185,1.0);
+  font-weight: bold;
+}
+
+.btn-home-desktop, .btn-home-desktop:link, .btn-home-desktop:visited {
+  border-radius: 2px !important;
+  color: #fff !important;
+  font-weight: bold;
+  // text-shadow: 0 1px 0 black;
+  background-color: rgba(255, 255, 255, .5) !important;
+  // border-color: rgba(255, 255, 255, .5) !important;
+  padding: 9px 27px;
+  // border-bottom-color: rgba(255, 255, 255,1);
+}
+
+.btn-home-desktop:active, .btn-home-desktop:hover {
+  color: #fff !important;
+  background-color: rgba(0,0,0,0.35) !important;
+  // border-color: rgba(0,0,0,0.35) !important;
+  // border-bottom-color: rgba(41, 128, 185,1.0);
   font-weight: bold;
 }
 
