--- a/public/views/home.html
+++ b/public/views/home.html
@@ -21,7 +21,7 @@
 <div class="container module-container va-container">
   <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 module module-img">
-      <img class="img-responsive" src="http://imperativemale.com/wp-content/uploads/2016/02/how-to-hack-wifi-password.png">
+      <img class="img-responsive" src="../img/module-img-01.jpg">
     </div>
 
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 module module-text va-middle">
