form validating, gulp working with lessify and watch

--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -99,7 +99,7 @@
 }
 
 .cust-table {
-  border: 1px solid black;
+  // border: 1px solid black;
   &.th-cell{
     vertical-align: bottom;
     font-weight: 700;
@@ -109,5 +109,11 @@
   }
 }
 
-
+.copy-text {
+  margin: auto;
+  margin-top: 2rem;
+  max-width:1000px;
+  // border: 1px solid black;
+  word-break: normal;
+}
 
