--- a/public/views/location-form.html
+++ b/public/views/location-form.html
@@ -27,34 +27,35 @@
         <p class="col-xs-12">{{location.reqNum - tally}} more people needed</p>
         </div>
     </div>
-    <form name="cust-form" class="col-xs-12 col-md-4" ng-submit="makeCustomer()" novalidate>
+    <form name="customerForm" class="col-xs-12 col-md-4" ng-submit novalidate>
       <div class="form-group">
         <hr>
         <h3 class="form-head">Add your name to list and select your preferred option:</h3>
         <label for="firstName">First Name</label>
-        <input type="text" ng-required="true" ng-minlength="3" name="firstName" class="form-control" id="customer-first-name" placeholder="first name" ng-model="formData.firstName">
-        <p ng-show="cust-form.firstName.$error.minlength" class="help-block">Name is too short</p>
+        <input type="text" ng-minlength="2" name="firstName" class="form-control" id="customer-first-name" placeholder="first name" ng-model="formData.firstName" required>
+        <p ng-show="customerForm.firstName.$error.minlength" class="help-block has-error">Name is too short</p>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" name="lastName" class="form-control" id="customer-last-name" placeholder="last name" ng-model="formData.lastName">
+        <input type="text" name="lastName" class="form-control" id="customer-last-name" placeholder="last name" ng-model="formData.lastName" required>
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" ng-required="true" name="email" class="form-control" id="customer-email" placeholder="email" ng-model="formData.email">
-        <p ng-show="cust-form.email.$invalid && !cust-form.email.$pristine" class="help-block">Enter valid email.</p>
+        <input type="email" name="email" class="form-control" id="customer-email" placeholder="email" ng-model="formData.email" required>
+        <p ng-show="customerForm.email.$invalid && !customerForm.email.$pristine" class="help-block has-error">Enter valid email.</p>
       </div>
       <div class="form-group">
         <label for="address">Street Address</label>
-        <input type="text" name="street" class="form-control" id="customer-street" placeholder="street address where you want better service" ng-model="formData.street">
+        <input type="text" name="street" class="form-control" id="customer-street" placeholder="street address where you want service" ng-model="formData.street" required>
       </div>
       <div class="form-group">
         <label for="lastName">City/Town</label>
-        <input type="text" name="city" class="form-control" id="customer-city" placeholder="city/town/area" ng-model="formData.city">
+        <input type="text" name="city" class="form-control" id="customer-city" placeholder="city/town/area" ng-model="formData.city" required>
       </div>
       <div class="form-group">
         <label for="phone">Phone Number</label>
-        <input type="text" name="phone" class="form-control" id="customer-phone" placeholder="000-000-0000" ng-model="formData.phone">
+        <input type="text" name="phone" ng-minlength="10" ng-maxlength="12" class="form-control" id="customer-phone" placeholder="000-000-0000" ng-model="formData.phone" required>
+        <p ng-show="customerForm.phone.$invalid && !customerForm.phone.$pristine" class="help-block has-error">Enter valid 10 digit Phone Number.</p>
       </div>
       <div class="form-inline">
         <div class="form-group">
@@ -122,14 +123,14 @@
       </div>
       <div class="location-options">
         <label for="options">Choose an Option</label>
-        <div class="radio" ng-required="true" ng-repeat="option in location.options track by $index">
+        <div class="radio" ng-repeat="option in location.options track by $index">
           <label>
-            <input type="radio" id="customer-option" value="{{ $index + 1 }}" ng-model="formData.choice">
+            <input type="radio" id="customer-option" value="{{ $index + 1 }}" ng-model="formData.choice" required>
               {{ option }}
           </label>
         </div>
       </div>
-      <button type="submit" id="submit-customer" ng-disabled="formData.$invalid" class="btn btn-default">Submit</button>
+      <button type="submit" ng-click="makeCustomer()" id="submit-customer" ng-disabled="customerForm.$invalid" class="btn btn-default">Submit</button>
     </form>
   <section>
 </section>
