--- a/public/views/templates/location-stats.html
+++ b/public/views/templates/location-stats.html
@@ -6,7 +6,7 @@
     <h3 class="group-progress" id="progress-count">{{selected.tally}} / {{selected.reqNum}}</h3>
     <!-- Progress bar -->
     <div class="group-progress col-xs-12 col-md-10" id="progress-bar">
-      <div class="progress">
+      <div class="progress back-container">
         <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{selected.tally}}" aria-valuemin="0" aria-valuemax="100" style="width: {{((selected.tally / selected.reqNum) * 100) + '%'}}">
           <span class="sr-only"></span>
         </div>
