--- a/public/less/main.less
+++ b/public/less/main.less
@@ -12,7 +12,7 @@
 html {
   font-size: 10px;
   overflow: hidden;
-  height: 100%
+  height: 100%;
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -22,16 +22,6 @@ html {
   }
 }
 
-.navbar {
-  margin-bottom: 0 !important;
-  font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
-}
-
-.navbar-default {
-  background-color: #fff !important;
-  border-color: #fff !important;
-}
-
 body {
   overflow: auto;
   height: 100%;
@@ -39,4 +29,15 @@ body {
 
 .modal-open {
   overflow: auto;
+}
+// .navbar .nav > li > a {
+//     color: white !important;
+// }
+
+.navbar-default {
+  // color: white !important;
+  margin-bottom: 0 !important;
+  font-family: 'Istok Web', 'Helvetica Neue', sans-serif;
+  background: rgba(255, 255, 255, 1) !important;
+  border: none;
 }
