--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,21 +1,20 @@
 
+
+
 <div class="jumbotron text-center">
 
-  <!-- <div class="video-container">
-    <video autoplay loop muted poster="screenshot.jpg" id="background">
-      <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-      </video> -->
+  <video autoplay loop muted poster="screenshot.jpg" id="background">
+    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+  </video>
 
-      <div class="container va-container">
-        <div class="va-middle">
-          <h1 class="jumbo-header">Get Connected</h1>
-          <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-          <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-mobile hidden-md hidden-lg">Take Action</a>
-          <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-desktop hidden-sm hidden-xs">Take Action</a>
-        </div>
-      </div>
-  <!-- </div> -->
-
+  <div class="container va-container">
+    <div class="va-middle">
+      <h1 class="jumbo-header">Get Connected</h1>
+      <h4 class="jumbo-sub-header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-mobile hidden-md hidden-lg">Take Action</a>
+      <a href="#/locations" title="" class="btn btn-jumbo btn-lg btn-home-desktop hidden-sm hidden-xs">Take Action</a>
+    </div>
+  </div>
 </div>
 
 <!-- Home page modules -->
