--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -5,7 +5,7 @@
 <!-- Location index -->
 <section class="container">
   <div class="row">
-    <h3 class="col-xs-4 col-sm-3 col-md-2 col-lg-1" style="margin-top:.5rem">Locations</h3>
+    <h3 class="col-xs-4 col-sm-3 col-md-2" style="margin-top:.5rem">Locations</h3>
     <ul class="nav nav-pills">
       <li ng-class="{ active: isSet(1) }" ng-click="setTab(1)"><a href="">Index</a></li>
       <li ng-class="{ active: isSet(2) }" ng-click="setTab(2)"><a href="">Add Location</a></li>
