--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width = device-width, initial-scale =1 ">
-    <base href="/">
+    <!-- <meta name="viewport" content="initial-scale = 1 "> -->
 
     <title>Wifi Demand Finder</title>
 
