--- a/public/views/templates/add-location.html
+++ b/public/views/templates/add-location.html
@@ -23,10 +23,13 @@
     <div class="form-group option-section">
       <div class="form-group col-xs-6 options-div row">
         <label for="options">Options</label>
-        <button id="add-option" ng-click="addOption()" class="form-group btn btn-default col-xs-2">&#43</button>
       </div>
-        <input type="text" name="options" class="form-control col-xs-10 col-md-5" id="location-option-1" placeholder="Option 1 - 12mbs/$49.99/mo" ng-model="formData.options.option1" required>
-        <input type="text" name="options" class="form-control col-xs-10 col-md-5" id="location-option-2" placeholder="Option 2 - 20mbs/$59.99/mo" ng-model="formData.options.option2" required>
+      <div>
+        <input type="text" name="options" id="option-input" class="form-control col-xs-10 col-md-5"placeholder="Option 1 - 12mbs/$59.99/mo" ng-model="optionToAdd" required>
+      </div>
+      <button id="add-option" ng-click="add(optionToAdd)" class="form-group btn btn-default col-xs-2">&#43 option</button>
+
+      <button id="clear-options" ng-click="clearOptions()" class="form-group btn btn-default col-xs-3">Clear Options</button>
     </div>
   </form>
   <div class="col-xs-12 col-sm-11 col-md-6">
@@ -35,14 +38,21 @@
       <div id="location-content" class="loc-content">
         <h1>{{ formData.name }}</h1>
         <p>{{ formData.description }}</p>
-        <h5>Summary</h5>
-        <p>{{ formData.summary }}</p>
-        <h5>target</h5>
-        <p>{{ formData.target }}</p>
-        <h5>Options</h5>
-        <p ng-repeat="option in formData.options">{{ option }}</p>
+        <dl>
+          <dt><h4>Summary</h4><dt>
+          <dd><p>{{ formData.summary }}</p></dd>
+        </dl>
+        <dl>
+          <dt><h4>Target</h4><dt>
+          <dd><p>{{ formData.target }}</p></dd>
+        </dl>
+        <dl>
+          <dt><h4>Options</h4></dt>
+          <dd ng-repeat="option in formData.options"><p>{{ option }}</p></dd>
+        </dl>
     </div>
-    </pre>
+<!--     <pre>{{formData | json}}</pre> -->
   </div>
   <button type="submit" id="submit-loc-btn" ng-disabled="locForm.$invalid || formData.$invalid" ng-click="addLocation()" class="form-group btn btn-default col-xs-2 add-option">Submit</button>
+  <button ng-click="formData = {}" class="form-group btn btn-default col-xs-2 clear-form">Clear Form</button>
 </section>
